Remplacement de 'abonné' par 'email' dans tout le dashboard

--- a/index.html
+++ b/index.html
@@ -259,8 +259,8 @@
 <body>
     <div class="container">
         <div class="dashboard">
-            <h1 class="title">Dashboard Abonnés</h1>
-            <p class="subtitle">Objectif: 20,000 abonnés</p>
+            <h1 class="title">Dashboard Emails</h1>
+            <p class="subtitle">Objectif: 20,000 emails</p>
             
             <div id="content">
                 <div class="loading">
@@ -324,7 +324,7 @@
                 contentDiv.innerHTML = `
                     <div class="stats-container">
                         <div class="stat-box">
-                            <div class="stat-label">Abonnés actuels</div>
+                            <div class="stat-label">Emails actuels</div>
                             <div class="stat-value">${formatNumber(subscriberCount)}</div>
                         </div>
                         <div class="stat-box">
